old-config/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "kubernetes-ingress-service"
  labels:
    # Timestamp used in order to force reload of the secret
    last_updated: "1494099933"
spec:
  tls:
  - hosts:
    - server.beautifulthings.app
    secretName: letsencrypt-certs
  rules:
  - host: server.beautifulthings.app
    http:
      paths:
      # The * is needed so that all traffic gets redirected to the nginx box
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
